--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,29 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //signingConfig signingConfigs.platform
     }
 
+    signingConfigs {
+        platform {
+            storeFile file('C:\\security\\nxp_platform.keystore')
+            storePassword 'platform'
+            keyAlias 'platform'
+            keyPassword 'android'
+        }
+    }
+
+
     buildTypes {
+
+        debug {
+            signingConfig signingConfigs.platform
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.platform
         }
     }
     compileOptions {
@@ -41,6 +58,8 @@ android {
 }
 
 dependencies {
+
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
