chore: Added screenshot, - bugfixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,12 +25,7 @@
         <activity
             android:name=".ui.activity.SubscriptionActivity"
             android:exported="true"
-            android:theme="@style/AppTheme.NoActionBar">
-            <!-- <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
-                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>-->
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
 
         <activity
@@ -46,17 +41,10 @@
             <meta-data
                 android:name="distractionOptimized"
                 android:value="true" />
-
-            <!-- <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
-                 <category android:name="android.intent.category.HOME" />
-                 <category android:name="android.intent.category.DEFAULT" />
-                 <category android:name="android.intent.category.LAUNCHER_APP" />
-             </intent-filter> -->
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
         </activity>
